--- a/index.html
+++ b/index.html
@@ -3,74 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3DPrintaBoys</title>
+  <title>3DPrintaBoys - Home</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      background-color: #f9f9f9;
-    }
-    nav {
-      background-color: #0044cc; /* Blue */
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-    }
-    nav h1 {
-      color: #ff6600; /* Orange */
-      margin: 0;
-      font-size: 1.5rem;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 1.5rem;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #ffcc99; /* Light orange hover */
-    }
-    section {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    h2 {
-      color: #0044cc;
-    }
-    .products {
-      background-color: #eef2f7;
-    }
-    .preorder button {
-      background-color: #ff6600;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .preorder button:hover {
-      background-color: #e65c00;
-    }
+    body { margin:0; font-family:Arial, sans-serif; background:#f9f9f9; }
+    nav { background:#0044cc; color:white; display:flex; justify-content:space-between; padding:1rem 2rem; }
+    nav h1 { color:#ff6600; margin:0; font-size:1.5rem; }
+    nav a { color:white; text-decoration:none; margin-left:1.5rem; font-weight:bold; }
+    nav a:hover { color:#ffcc99; }
+    section { padding:2rem; max-width:800px; margin:auto; }
+    h2 { color:#0044cc; }
   </style>
 </head>
 <body>
-  <!-- Top Navigation -->
   <nav>
     <h1>3DPrintaBoys</h1>
     <div>
-      <a href="#about">About</a>
-      <a href="#products">Products</a>
-      <a href="#preorder">Preorder</a>
+      <a href="index.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="preorder.html">Preorder</a>
     </div>
   </nav>
 
-  <!-- About Section -->
-  <section id="about">
+  <section>
     <h2>About Us</h2>
     <p>
       We are The 3DPrintaBoys, a passionate Year 4 team dedicated to creativity and innovation. 
@@ -83,26 +37,6 @@
       We are constantly learning, improving, and pushing the boundaries of what toys can be. 
       With your support, we aim to bring our creations to homes everywhere and inspire the next generation of makers.
     </p>
-  </section>
-
-  <!-- Products Section -->
-  <section id="products" class="products">
-    <h2>Products</h2>
-    <p>
-      Explore our collection of 3D-printed toys, each designed with creativity and care. 
-      We focus on making toys that are safe, durable, and full of personality. 
-      Our designs range from playful animals to imaginative gadgets, all made to spark joy.
-    </p>
-  </section>
-
-  <!-- Preorder Section -->
-  <section id="preorder" class="preorder">
-    <h2>Preorder</h2>
-    <p>
-      Be the first to own our latest creations! Preorder now and support our journey. 
-      Your preorder helps us grow, experiment, and deliver even more exciting toys to children everywhere.
-    </p>
-    <button>Preorder Now</button>
   </section>
 </body>
 </html>
