--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3DPrintaBoys - Home</title>
+  <title>3DPRINTABOYS - Home</title>
   <style>
     body { margin:0; font-family:Arial, sans-serif; background:#f9f9f9; }
     nav { background:#0044cc; color:white; display:flex; justify-content:space-between; padding:1rem 2rem; }
@@ -16,7 +16,7 @@
 </head>
 <body>
   <nav>
-    <h1>3DPrintaBoys</h1>
+    <h1>3DPRINTABOYS</h1>
     <div>
       <a href="index.html">About</a>
       <a href="products.html">Products</a>
