--- a/preorder.html
+++ b/preorder.html
@@ -18,7 +18,10 @@
 </head>
 <body>
   <nav>
-    <h1>3DPRINTABOYS</h1>
+    <div style="display:flex; align-items:center; gap:1rem;">
+      <img src="logo.png" alt="3DPRINTABOYS Logo" style="height:50px;">
+      <h1>3DPRINTABOYS</h1>
+    </div>
     <div>
       <a href="index.html">About</a>
       <a href="products.html">Products</a>
