--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section>
     <h2>About Us</h2>
     <p>
-      We are The 3DPrintaBoys, a passionate Year 4 team dedicated to creativity and innovation. 
+      We are The 3DPRINTABOYS, a passionate Year 4 team dedicated to creativity and innovation. 
       Our mission is to design and build toys that are not only fun but also truly unique. 
       Every toy we create is carefully crafted using 3D printing technology to ensure quality and originality. 
       We believe playtime should spark imagination, curiosity, and joy for children. 
