--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     nav a:hover { color:#ffcc99; }
     section { padding:2rem; max-width:800px; margin:auto; }
     h2 { color:#0044cc; }
+    p { display:flex; align-items:center; justify-content:center; min-height:80px; }
   </style>
 </head>
 <body>
@@ -39,6 +40,9 @@
       Each product reflects our vision of combining technology with childhood wonder. 
       We are constantly learning, improving, and pushing the boundaries of what toys can be. 
       With your support, we aim to bring our creations to homes everywhere and inspire the next generation of makers.
+    </p>
+    <p>
+      <strong>Buy Now!!!</strong>
     </p>
   </section>
 </body>
