--- a/preorder.html
+++ b/preorder.html
@@ -39,24 +39,7 @@
 <div class="product-image">
 <img src="product1. jpg" alt="Our current products.">
 </div>
-<style>
-• product-image { padding-top: 351px;
-}
-/* - Apply to the Parent Container -*/
-/* (Assuming the container class is 'image-wrapper') */
-• product-image { position: relative;
-/* CRUCIAL: Define the height of the container to center within */ height: 400px;
-}
-/* - Apply to the Image Itself --*/
-• product-image {
-/* 1. Positioning */ position: absolute;
-top: 50%; /* Move the top edge to the vertical center */ left: 50%; /* Move the left edge to the horizontal center */
-/* 2. Transformation (Corrects for the image's own size) */
-/* Shift the image back by half its own width (-50% X) and half its own height (-50% Y) */ transform: translate(-50%, -50%);
-/* 3. Responsive Scaling (Optional but Recommended) */
-max-width: 100%; max-height: 100%; }
-
-</style>
+    <section>
 </body>
 </html> 
 
