--- a/preorder.html
+++ b/preorder.html
@@ -37,7 +37,7 @@
     </p>
 
 <div class="product-image">
-<img src="product1. jpg" alt="Our current products.">
+<img src="product1. jpg">
 </div>
     <section>
 </body>
