sbd,sbd,chas,dclzsdcl

--- a/preorder.html
+++ b/preorder.html
@@ -35,7 +35,8 @@
       Your preorder helps us grow, experiment, and deliver even more exciting toys to children everywhere.
       <br><em>To place a preorder, please leave a note at the 4Y classroom. Thank you for your support!</em>
     </p>
-   <button onclick="products.html"=HTML Tutorial</button>
+    <br>
+    <a href="https://3dprintaboys.vercel.app/products.html">View Our Products</a>
     <section>
 </body>
 </html> 
