--- a/preorder.html
+++ b/preorder.html
@@ -33,7 +33,20 @@
     <p>
       Be the first to own our latest creations! Preorder now and support our journey. 
       Your preorder helps us grow, experiment, and deliver even more exciting toys to children everywhere.
-      <br><em>To place a preorder, please leave a note at the 4Y classroom. Thank you for your support!</em>
+      <br><em>To place a preorder, please leave a note at the 4Y classroomwith you name and class Thank you for your support!
+        support, 
+        - minecraft fox large
+        - minecraft fox smaller 
+        - minecraft creeper normal 
+        minecraft creeper smaller
+        - minecraft fish bones
+        - minecraft chicken
+        minecraft panda
+        minecraft fish
+        minecraft horse white colour 
+        minecraft horse black colour
+        </small>
+      </em>
     </p>
     <br>
     <a href="products.html">
