--- a/preorder.html
+++ b/preorder.html
@@ -31,7 +31,10 @@
   </nav>
     <h2>Preorder</h2>
     <p>
-      Be the first to own our latest creations! Preorder now and support our journey. 
+      Be the first to own our latest creations! 
+      <br>
+      Preorder now and support our journey. 
+      <br>
       Your preorder helps us grow, experiment, and deliver even more exciting toys to children everywhere.
       <h1>
         How to Preorder:
