--- a/preorder.html
+++ b/preorder.html
@@ -11,7 +11,7 @@
     nav a { color:white; text-decoration:none; margin-left:1.5rem; font-weight:bold; }
     nav a:hover { color:#ffcc99; }
     section { padding:2rem; max-width:800px; margin:auto; }
-    h2 { color:#0044cc; }
+    h2 { color:#0044cc; padding-left:167px;}
     button { background:#ff6600; color:white; border:none; padding:0.75rem 1.5rem; font-size:1rem; border-radius:5px; cursor:pointer; }
     button:hover { background:#e65c00; }
     p { display:flex; align-items:center; justify-content:center; min-height:80px; }
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <br>
-    <h2>                      Preorder</h2>
+    <h2>Preorder</h2>
     <p>
       Be the first to own our latest creations! 
       <br>
@@ -38,6 +38,7 @@
       <br>
       Your preorder helps us grow, experiment, and deliver even more exciting toys to children everywhere.
       <h1>
+        <br>
         How to Preorder:
       </h1>
       <br>
