--- a/preorder.html
+++ b/preorder.html
@@ -12,7 +12,7 @@
     nav a:hover { color:#ffcc99; }
     section { padding:2rem; max-width:800px; margin:auto; }
     h2 { color:#0044cc; padding-left:240px;}
-    button { background:#ff6600; color:white; border:none; padding:0.75rem 1.5rem; font-size:1rem; border-radius:5px; cursor:pointer; padding-bottom: 300px; padding-left: 367px;}
+    button { background:#ff6600; color:white; border:none; padding:0.75rem 1.5rem; font-size:1rem; border-radius:5px; cursor:pointer;}
     button:hover { background:#e65c00; }
     p { display:flex; align-items:center; justify-content:center; min-height:80px; }
   </style>
