--- a/preorder.html
+++ b/preorder.html
@@ -42,7 +42,7 @@
         How to Preorder:
       </h1>
       <br>
-      <br><em>To place a preorder, please leave a note at the 4Y classroom with you name and class.
+      <br>To place a preorder, please leave a note at the 4Y classroom with you name and class.
         <br>
         Thank you for your support!
         <br>
