--- a/preorder.html
+++ b/preorder.html
@@ -44,12 +44,10 @@
         How to Preorder:
       </h3>
       <br>
-      <br>To place a preorder, please leave a note at the 4Y classroom with you name and class.
+      To place a preorder, please leave a note at the 4Y classroom with you name and class.
         <br>
         Thank you for your support!
         <br>
-
-        
         - minecraft fox large
         <br>
         - minecraft fox smaller 
