--- a/preorder.html
+++ b/preorder.html
@@ -48,13 +48,9 @@
         <br>
         Thank you for your support!
         <br>
-        - minecraft fox large
+        - minecraft fox large/small
         <br>
-        - minecraft fox smaller 
-        <br>
-        - minecraft creeper normal 
-        <br>
-        -minecraft creeper smaller
+        - minecraft creeper large/small
         <br>
         - minecraft fish bones
         <br>
@@ -66,8 +62,8 @@
        <br>
        - minecraft horse white colour 
        <br>
-       -  minecraft horse black colour
-       <br>
+       -  minecraft horse brown/black/white colour
+        <br>
         </small>
       </em>
     </p>
