--- a/preorder.html
+++ b/preorder.html
@@ -58,9 +58,7 @@
         <br>
       - minecraft panda
       <br>
-       - minecraft fish
-       <br>
-       - minecraft horse white colour 
+       - minecraft tropical fish/clown fish
        <br>
        -  minecraft horse brown/black/white colour
         <br>
