bruh it wont work

--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
       <h1>3DPRINTABOYS</h1>
     </div>
     <div style="display:flex; align-items:center;">
-      <a href="index.html">About Us</a>
+      <a href="index.html">About</a>
       <a href="products.html">Products</a>
       <a href="preorder.html">Preorder</a>
     </div>
