--- a/preorder.html
+++ b/preorder.html
@@ -104,7 +104,7 @@
       amount: document.getElementById("amount").value
     };
 
-    emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", templateParams)
+    emailjs.send("service_bi7jf4p", "template_5diyqfg", templateParams)
       .then(function(response) {
         alert("Email sent successfully!");
       }, function(error) {
