--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
     body { margin:0; font-family:Arial, sans-serif; background:#eef2f7; }
     nav { background:#0044cc; color:white; display:flex; justify-content:space-between; padding:1rem 2rem; }
     nav h1 { color:#ff6600; margin:0; font-size:1.5rem; }
-    nav a { color:white; text-decoration: none; margin-left:1.5rem; font-weight:strong; }
+    nav a { color:white; text-decoration: none; margin-left:1.5rem; font-weight:bold; }
     nav a:hover { color:#ffcc99; }
     section { padding:2rem; max-width:800px; margin:auto; }
     h2 { color:#ff6600; }
