--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 
     </div>
     <div style="display:flex; align-items:center;">
-      <a href="index.html">About</a>
+      <a href="">About</a>
       <a href="products.html">Products</a>
       <a href="preorder.html">Preorder</a>
     </div>
