--- a/preorder.html
+++ b/preorder.html
@@ -71,7 +71,7 @@
 </a>
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script>
-    emailjs.init("82prg333IAoZh571");
+    emailjs.init("NDtKfn1UXGhrSdHzu");
 </script>
 <hr>
 
