--- a/preorder.html
+++ b/preorder.html
@@ -69,53 +69,10 @@
 <a href="products.html">
   <button>View Our Products</button>
 </a>
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script>
-    emailjs.init("NDtKfn1UXGhrSdHzu");
-</script>
 
-<h2>Contact Form</h2>
-<form id="contactForm">
 
-    <label>Name:</label><br>
-    <input type="text" id="name" required><br><br>
 
-    <label>Class:</label><br>
-    <input type="text" id="class" required><br><br>
 
-    <label>Product:</label><br>
-    <input type="text" id="product" required><br><br>
-
-    <label>Quantity:</label><br>
-    <input type="number" id="quantity" required><br><br>
-
-    <button type="submit">Send Email</button>
-</form>
-
-<script>
-    document.getElementById("contactForm").addEventListener("submit", function(event) {
-        event.preventDefault(); // Prevents the form from submitting and refreshing the page
-
-        // 1. Collect form data using the CORRECT IDs
-        const templateParams = {
-            name: document.getElementById("name").value,
-            class: document.getElementById("class").value,
-            product: document.getElementById("product").value,
-            amount: document.getElementById("quantity").value,
-        };
-
-        // 2. Send the email using EmailJS
-        emailjs.send("service_bifjfdp", "template_3dprintaboys", templateParams)
-            .then(function(response) {
-                alert("Email sent successfully!");
-                // OPTIONAL: Clear the form after successful submission
-                document.getElementById("contactForm").reset();
-            }, function(error) {
-                console.error("Failed to send email:", error);
-                alert("Failed to send email. Please try again later.");
-            });
-    });
-</script>
-
+<button>Preorder Now!!!<a href="http://https://docs.google.com/forms/d/e/1FAIpQLScHuH0t6z3r9yUJ8NGXf0NTLgd3SRRDkxWCW4imMbP7XKW-1Q/viewform?usp=dialog"></a></button>
 </body>
 </html>
