--- a/preorder.html
+++ b/preorder.html
@@ -73,6 +73,17 @@
 
 
 
-<button>Preorder Now!!!<a href="http://https://docs.google.com/forms/d/e/1FAIpQLScHuH0t6z3r9yUJ8NGXf0NTLgd3SRRDkxWCW4imMbP7XKW-1Q/viewform?usp=dialog"></a></button>
+
+    
+  
+  <button onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScHuH0t6z3r9yUJ8NGXf0NTLgd3SRRDkxWCW4imMbP7XKW-1Q/viewform?usp=dialog', '_blank')">
+    Preorder Now!!!
+  </button>
+
+    
+  
+  
+
 </body>
+
 </html>
